Change lightwave UI header
Remove beta from the banner
Change the name to Cascade from Lightwave

Change-Id: I7912796183c1c5c242374cfebc04bbd98c3842ea

--- a/vmidentity/lightwaveui/web/app/index.html
+++ b/vmidentity/lightwaveui/web/app/index.html
@@ -38,8 +38,7 @@
     <div ng-controller="ProfileCntrl">
         <div class="title">
           <img src="assets/vm_logo.png" height="32px;" width="32px" style="margin-left:10px;border-radius: 3px;margin-right:5px;"/>
-            Lightwave Admin
-            <sup><small>Beta</small></sup>
+            Cascade Admin
             <div ng-show="globals.currentUser" class="logged-in-user ng-cloak">
                 {{globals.currentUser.username}}
                 <button type="button"
