Build webui war file using maven plugin and include in RPM
Change-Id: I8aad75270d8c12776d3816060c36be2cdc884d76

--- a/vmidentity/webui/src/index.html
+++ b/vmidentity/webui/src/index.html
@@ -7,7 +7,7 @@
     <meta name="referrer" content="no-referrer" />
   </head>
 
- <body class="container" style="width:100% !important;">
+ <body class="container" style="overflow-y:hidden;width:100% !important;">
    <myapp>Loading AppComponent content here ...</myapp>
  </body>
 
