lwui: group members dialog should list domains instead of providers
when showing domains to search within, membership picker ui
should enum domains, not providers
(provider name could be different from domain name,
provider could expose multiple domains)

we should also allow for free form entry (to account for cases of
not all domains being successfully discovered)

reviving unit tests in /vmidentity/rest

testing done:
 - deployed standalone lw
 - manual tests in ui
 - vmidentity/rest unit tests passed
 - sso integration tests (oidc/client & rest/idm/client) passed

Change-Id: I8bb8a556d6af723442d3d02a278e79f37cf8dd02

--- a/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/groupmembers/group.members.edit.html
+++ b/vmidentity/lightwaveui/web/app/src/sso/usersandgroups/groupmembers/group.members.edit.html
@@ -106,10 +106,21 @@
               ng-submit="searchmembers(vm.membersearch, vm.idsmembersearch, membersearchtype)"
               role="searchmembersform" style="margin-top:-10px;">
             <div class="member-search-criteria-box">
-                Domain: <select
+                Domain: <input
+                    list="domainslist"
+                    type="text"
                     ng-model="vm.idsmembersearch"
-                    ng-options="t as t.name for t in vm.identitysources"
-                    style="height:24px;width:120px;margin-left:5px;" ng-change="getallmembers(vm.idsmembersearch);"></select>
+                    style="height:24px;width:120px;margin-left:5px" >
+                        <datalist
+                            name="domainslist"
+                            id="domainslist">
+                                <option
+                                    ng-repeat="sd in vm.securitydomains track by sd.name"
+                                    label="{{sd.name}}"
+                                    value="{{sd.name}}">{{sd.name}}
+                                </option>
+                        </datalist>
+                    </input>
                 Filter: <select
                     ng-model="membersearchtype"
                     ng-options="t as t.name for t in membersearchtypes"
