Fix paths in Lightwave UI
This will fix the Service Providers Panes.

Change-Id: Ib24ad33148f751cc59ebac9e534d271d8076fd09

--- a/ui/lightwave-ui/idm/app/index.html
+++ b/ui/lightwave-ui/idm/app/index.html
@@ -36,7 +36,7 @@
     <div ng-controller="ProfileCntrl">
         <div class="title">
           <img src="idm/assets/vm_logo.png" height="32px;" width="32px" style="margin-left:10px;border-radius: 3px;margin-right:5px;"/>
-            VKE Admin
+            Lightwave Admin
             <div ng-show="globals.currentUser" class="logged-in-user ng-cloak">
 		<b>{{globals.currentUser.server.host}}</b><br>
                 {{globals.currentUser.username}}
